--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,20 @@
     <div class="contact"><a href="mailto:peterk3@koruga.com?Subject=Portfolio%20Interest">Email</a></div>
 </div> %>
 <div class="headline">
+    <div class="headline-title"></div>
+    <div class="headline-spacer"><img src="/images/icons/icon_50_white.png" /></div>
+    <div class="headline-info"></div>
+</div>
+<div class="slideCount"><span class="c1 slIcon"><%= fa_icon("circle") %></span><span class="c2 slIcon"><%= fa_icon("circle") %></span></div>
+<%# <div class="headline">
+    <div class="headline-title">Everything is Figureout<span class="mobileHyphen">-</span>able!</div>
+    <div class="headline-spacer"><img src="/images/icons/icon_50_white.png" /></div>
+    <div class="headline-info">
+        Some things that you will never hear me say is "I cant do that" or "I dont know how". I borrowed the phrase Everything is Figureoutable from <a href="https://www.marieforleo.com/" class="marieLink">Marie Forleo</a> but the idea that there is nothing that I can't figure out how to do given sometime to work 
+        through it has been my mental montra for as long as I can remember.  
+    </div>
+</div> %>
+<%# <div class="headline">
     <div class="headline-title">Making is my Passion!</div>
     <div class="headline-spacer"><img src="/images/icons/icon_50_white.png" /></div>
     <div class="headline-info">
@@ -13,7 +27,7 @@
         Very few things bring me more joy than finding a need or reason to start and complete a project. Being wired to constantly want to improve 
         by reading, watching, listening or mentored guidence allows me to be versatile to any team. Logic and common sense are my north star.
     </div>
-</div>
+</div> %>
 
 <div class="quick-items">
     <div class="quick-item">
