--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -52,7 +52,7 @@
         <div class="nav-right">
             <ul>
                 <li><%= link_to('Projects', details_path()) %></li>
-                <li><%= link_to('Resume', resume_path()) %></li>
+                <li><%= link_to('Resume', resume_path()) %> <%= link_to(fa_icon("file"), "/resume.pdf", target: "_blank") %></li>
                 <li class="stripe1">4 the Kids</li>
             </ul>
         </div>
