--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,32 +7,15 @@
 </div> %>
 <div class="headline">
     <div class="headline-title"></div>
-    <div class="headline-spacer"><img src="/images/icons/icon_50_white.png" /></div>
+    <div class="headline-spacer"><img src="/images/icons/icon_50_white.png" alt="P3 Spacer Image"/></div>
     <div class="headline-info"></div>
 </div>
 <div class="slideCount"><span class="c1 slIcon"><%= fa_icon("circle") %></span><span class="c2 slIcon"><%= fa_icon("circle") %></span></div>
-<%# <div class="headline">
-    <div class="headline-title">Everything is Figureout<span class="mobileHyphen">-</span>able!</div>
-    <div class="headline-spacer"><img src="/images/icons/icon_50_white.png" /></div>
-    <div class="headline-info">
-        Some things that you will never hear me say is "I cant do that" or "I dont know how". I borrowed the phrase Everything is Figureoutable from <a href="https://www.marieforleo.com/" class="marieLink">Marie Forleo</a> but the idea that there is nothing that I can't figure out how to do given sometime to work 
-        through it has been my mental montra for as long as I can remember.  
-    </div>
-</div> %>
-<%# <div class="headline">
-    <div class="headline-title">Making is my Passion!</div>
-    <div class="headline-spacer"><img src="/images/icons/icon_50_white.png" /></div>
-    <div class="headline-info">
-        The opportunity to make things for a living is what I have been preparing to do for the last 10 years.  
-        Very few things bring me more joy than finding a need or reason to start and complete a project. Being wired to constantly want to improve 
-        by reading, watching, listening or mentored guidence allows me to be versatile to any team. Logic and common sense are my north star.
-    </div>
-</div> %>
 
 <div class="quick-items">
     <div class="quick-item">
         <div class="title">
-            Skills
+            Coding Skills
         </div>
         <div class="info">
             HTML, CSS, Javascript, jQuery, Swift, Objective-C, AWS, PHP, Ruby, Rails, React, C++ (Wiring), Python, SQL
@@ -48,10 +31,11 @@
     </div>
     <div class="quick-item">
         <div class="title">
-            ABC
+            Personal Interests
         </div>
         <div class="info">
-            <b>A</b>lways <b>B</b>e <b>C</b>reating
+            Coding, Business, Sports, Aviation (Private Pilot), Technology, Drones, 3D Printing, Music, Fitness,
+            ABC (<b>A</b>lways <b>B</b>e <b>C</b>reating)
         </div>
     </div>
 </div>
