--- a/app/views/home/detail.html.erb
+++ b/app/views/home/detail.html.erb
@@ -13,32 +13,82 @@
         </ul>
     </div>
     <div class="project-details">
-        <div class="title">
-            <%= @project.title %>
+        <div class="desk">
+            <div class="desk-container">
+                <div class="title"><%= @project.title %></div>
+                <div class="image-link">
+                    <div class="pro-image">
+                        <% if @project.main_image.attached? %>
+                            <%= image_tag(@project.main_image, alt: @project.main_alt, class: "project-image") %>
+                        <% end %>
+                    </div>
+                    <div class="intro link-cont">
+                        <% if @project.publicUrl != "" %>
+                            <%= link_to('View', @project.publicUrl, class: "link", target: "_blank") %>
+                        <% end %>
+                        <% if @project.adminUrl != "" %>
+                            <%= link_to('Admin Demo', @project.adminUrl, class: "link", target: "_blank") %>
+                        <% end %>
+                        <% if @project.gitUrl != "" %>
+                            <%= link_to('Github', @project.gitUrl, class: "link", target: "_blank") %>
+                        <% end %>
+                    </div>
+                </div>
+                <div class="project-info">
+                    
+                    
+                    <div class="pro-intro"><%= @project.intro %></div>
+                    <div class="description"><%= @project.description %></div>
+                    <div class="tech">
+                        <% for i in 0...@project.teches.count %>
+                            <% if i < @project.teches.count-1 %>
+                                <%= "#{@project.teches[i].name}," %>
+                            <% else %>
+                                <%= @project.teches[i].name %>
+                            <% end %>
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+            
+            
         </div>
-        <% if @project.publicUrl != "" %>
-            <%= link_to('View', @project.publicUrl, class: "link") %>
-        <% end %>
-        <% if @project.adminUrl != "" %>
-            <%= link_to('Admin Demo', @project.adminUrl, class: "link") %>
-        <% end %>
-        <% if @project.gitUrl != "" %>
-            <%= link_to('Github', @project.gitUrl, class: "link") %>
-        <% end %>
-        <p class="intro"><%= @project.intro %></p>
-        <p class="description"><%= @project.description %></p>
-        <p class="tech">
-            <% for i in 0...@project.teches.count %>
-                <% if i < @project.teches.count-1 %>
-                    <%= "#{@project.teches[i].name}," %>
-                <% else %>
-                    <%= @project.teches[i].name %>
-                <% end %>
+        <div class="mobile">
+            <% @projects.each do |p|%>
+                <div class="project">
+                    <div class="quick">
+                        <%= p.title %>
+                    </div>
+                    <div class="intro link-cont">
+                        <% if p.publicUrl != "" %>
+                            <%= link_to('View', p.publicUrl, class: "link", target: "_blank") %>
+                        <% end %>
+                        <% if p.adminUrl != "" %>
+                            <%= link_to('Admin Demo', p.adminUrl, class: "link", target: "_blank") %>
+                        <% end %>
+                        <% if p.gitUrl != "" %>
+                            <%= link_to('Github', p.gitUrl, class: "link", target: "_blank") %>
+                        <% end %>
+                    </div>
+                    <div class="intro"><%= p.intro %></div>
+                    <div class="intro"><%= p.description %></div>
+                    <div class="intro">
+                        <% for i in 0...p.teches.count %>
+                            <% if i < p.teches.count-1 %>
+                                <%= "#{p.teches[i].name}," %>
+                            <% else %>
+                                <%= p.teches[i].name %>
+                            <% end %>
+                        <% end %>
+                    </div>
+                    <div class="project-image-container">
+                        <% if p.main_image.attached? %>
+                            <%= image_tag(p.main_image, alt: p.main_alt, class: "project-image") %>
+                        <% end %>
+                    </div>
+                </div>
+                
             <% end %>
-        </p>
-        <% if @project.main_image.attached? %>
-            <%= image_tag(@project.main_image, alt: @project.main_alt, class: "project-image") %>
-        <% end %>
     </div>
 </div>
 <div class="view-project-image">
