--- a/app/views/home/resume.html.erb
+++ b/app/views/home/resume.html.erb
@@ -4,50 +4,21 @@
         <div class="quick">Experience</div>
     </div>
     <div class="cat-items">
-        <div class="cat-item">
-            <div class="cat-title">Indianhead Valley Condos Fullstack</div>
-            <div class="intro">Online availability and booking on the front end and all of the RMS functionality in the back end. The app uses Parseplatform API and Server for data storage and user admin (currently refactoring to use AWS). It is capable of managing all aspects of a family owned lodging facility. Which includes creating, reading, updating and deleting guests, reservations, payments and other financial/bookkeeping/sales data. Payment processing via the Stripe API. Visual reservation calendar for 13 units.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Indianhead Valley Condos iOS Admin App</div>
-            <div class="intro">All of the functionality of the back end of the website including Stripe payments.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Peter Koruga Portfolio</div>
-            <div class="intro">Rather than just writing what I did on different projects, I have tried to use some of those features directly in this site. Things like spinning up an EC2 instance with SSL to host this site and multiple other Rails applications. Connecting to S3 for Active Storage. Running the phone number through Twilio. Accepting donations for my Non-Profit WUP Rise through the Stripe Payments API. Sending "Thank You for Donating" transactional emails through Twilio Sendgrid.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Crime Scene Evidence Marker</div>
-            <div class="intro">iOS app that allows police evidence techs, either in the field or in the lab, to use their phone as the evidence marker. Think the little yellow tent card that you see on crime shows.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Blood Spatter Angle Calculator</div>
-            <div class="intro">iOS app that law enforcement uses to calculate blood spatter angles at a crime scene.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Blood Spatter Angle Calculator Pro</div>
-            <div class="intro">iOS app that law enforcement uses to calculate blood spatter angles at a crime scene. This version of the app also saves the measurements in iCloud's CloudKit and prints reports to be used in court.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Crime Scene Photo Identifier Card</div>
-            <div class="intro">A super quick iOS app that is simply used by photographers (made for law enforcment evidence techs) to identify sections of pictures.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Simple Schedule Viewer</div>
-            <div class="intro">A different approach to the iOS calendar view. The app can access the native iOS calander and create events that can then be displayed in a way that is more like your kids sports schedule on the fridge.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Custom Wifi Garage Door Opener</div>
-            <div class="intro">One of my most gratifying projects because it was my first custom designed and etched PCB. The system uses a Particle Argon for Wifi connectivity and an iOS app with API calls to the Particle Cloud to open, close and check the doors current position.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Custom Smart Thermostat</div>
-            <div class="intro">Why pay for a smart thermostat when you can build one. Utilizing a Particle Argon controller then sensing temperature and humidity and current weather conditions to determine if the temp in the house should be bumped up to hold a more accurate FEELING temperature. A second sensing unit at the family cottage sends indoor temperature readings back to the main display unit at the house via a cellular Particle Boron. The iOS companion app has all of the functionality of the wall unit plus the addition of adjusting settings.</div>
-        </div>
-        <div class="cat-item">
-            <div class="cat-title">Wifi Turtle Tank Controller</div>
-            <div class="intro">Turtle tank environment controller that turns on/off the heat lamp, UVB lamp and heater. Particle Photon as the controller with a relay shield for power switching. I hacked a power strip to have controllable outlets. The enlcosure of the controller was printed on my 3d printer.</div>
-        </div>
+        <% @projects.each do |p| %>
+            <div class="cat-item">
+                <div class="cat-title"><%= p.title %></div>
+                <div class="intro">
+                    <% for i in 0...p.teches.count %>
+                        <% if i < p.teches.count-1 %>
+                            <%= "#{p.teches[i].name}," %>
+                        <% else %>
+                            <%= p.teches[i].name %>
+                        <% end %>
+                    <% end %>
+                </div>
+                <div class="intro"><%= p.description %></div>
+            </div>
+        <% end %>
     </div>
 
     <div class="resume-cat">
