--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -515,6 +515,11 @@ body {
     }
 }
 
+.resume {
+    .tech {
+        padding-bottom: 5px;
+    }
+}
 .footer {
     color: white;
     text-align: center;
