--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,4 +38,32 @@
             ABC (<b>A</b>lways <b>B</b>e <b>C</b>reating)
         </div>
     </div>
+    <div class="quick-item stretch">
+        <div class="title">
+            So... Who can I help?
+        </div>
+        <div class="info left">
+
+            Businesses with in-house applications or business SaaS platforms.
+
+            <p>Having been involved in the "business" end of a number of different businesses I have a perspective and a business vision that some developers with less or no business experience will have.  Being able to look at an application and picture how a non-technical end user will use the application is an advantage that I provide.</p>
+            
+            <p>Spending all my time coding is my ideal position. However, it would be doing what I am good at a disservice. One thing that I have been doing almost my entire life is.... wait for it... TALKING ;) Some might say just a bit too much (Dad). Being able to sit with potential SaaS clients and working through what there needs are and how a team that I am on could solve there problems then going back to the computer and crunching would be a great fit for my capabilities.</p>
+
+        </div>
+    </div>
+    <div class="quick-item stretch">
+        <div class="title">
+            And... Who can help me?
+        </div>
+        <div class="info left">
+
+            A company that cares as much about how they can help their team members as how the team members can help them.
+            
+            <p>A company that is willing to mentor and guide junior developers into the profession is who can be of service to me. None of the mentoring or guidence however should be allowed to go undeserved. The mentee needs to be willing to accept that the person trying to help them knows more than they do but is willing to bring you up to their level. My hunger to improve, learn and level up my skills would welcome the feeding of such a mentor. </p>
+
+            <p>Knowing that its HR's and recruiters job to de-risk all hires, I understand that with little expierence on a professional development team, I would be likely considered a high risk hire. For the opportunity to work for the right company, I am open to any number of ways that I could de-risk that opportunity.</p>
+
+        </div>
+    </div>
 </div>
