--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -62,7 +62,7 @@
             
             <p>A company that is willing to mentor and guide junior developers into the profession is who can be of service to me. None of the mentoring or guidence however should be allowed to go undeserved. The mentee needs to be willing to accept that the person trying to help them knows more than they do but is willing to bring you up to their level. My hunger to improve, learn and level up my skills would welcome the feeding of such a mentor. </p>
 
-            <p>Knowing that its HR's and recruiters job to de-risk all hires, I understand that with little expierence on a professional development team, I would be likely considered a high risk hire. For the opportunity to work for the right company, I am open to any number of ways that I could de-risk that opportunity.</p>
+            <p>Knowing that its HR's and recruiters job to de-risk all hires, I understand that with little expierence on a professional development team, I would likely be considered a high risk hire. For the opportunity to work for the right company, I am open to any number of ways that I could de-risk that opportunity.</p>
 
         </div>
     </div>
