--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,18 @@
 <div class="admin-projects">
     <div class="admin-top">
         <div class="admin-head-page-title">Admin Area</div>
-        <div class="admin-menu"><%= @user ? link_to("Logout #{@user.first_name}" , access_logout_path()) : link_to('Login', access_login_path()) %></div>
+        <div class="admin-menu">
+            <% if @user %>
+                <ul>
+                    <li><%= link_to("Projects" , projects_path()) %></li>
+                    <li><%= link_to("Applications" , job_applications_path()) %></li>
+                    <li><%= link_to("Logout #{@user.first_name}" , access_logout_path()) %></li>
+                </ul>
+                
+                <% else %>
+                 <%= link_to('Login', access_login_path()) %>
+                 <% end %>
+            </div>
     </div>
     <div class="project-list">
         <div class="admin-menu-title">Projects</div>
