--- a/app/views/job_applications/show.html.erb
+++ b/app/views/job_applications/show.html.erb
@@ -4,6 +4,7 @@
         <div class="admin-menu">
             <% if @user %>
                 <ul>
+                    <li><%= link_to("Certificates" , certificates_path()) %></li>
                     <li><%= link_to("Projects" , projects_path()) %></li>
                     <li><%= link_to("Applications" , job_applications_path()) %></li>
                     <li><%= link_to("Logout #{@user.first_name}" , access_logout_path()) %></li>
@@ -51,8 +52,9 @@
             <%= content_tag(:div, "https://peter.koruga.com?appid=#{@app.gen_code}", class: "form-item") %>
 
             <div class="form-buttons">
-                <%= f.submit("Create Application") %>
-                <%= link_to("Cancel", job_application_path()) %>
+                <%= f.submit("Edit Application") %>
+                <%= link_to("Cancel", job_application_path(@app)) %>
+                <%= link_to("Create Resume", new_resume_path(appid: @app.id)) %>
             </div>
         </div>
     <% end %>     
