--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,6 +4,7 @@
         <div class="admin-menu">
             <% if @user %>
                 <ul>
+                    <li><%= link_to("Certificates" , certificates_path()) %></li>
                     <li><%= link_to("Projects" , projects_path()) %></li>
                     <li><%= link_to("Applications" , job_applications_path()) %></li>
                     <li><%= link_to("Logout #{@user.first_name}" , access_logout_path()) %></li>
