starting to use wicked pdf for resume print

--- a/app/views/job_applications/show.html.erb
+++ b/app/views/job_applications/show.html.erb
@@ -62,7 +62,7 @@
                 <div class="resume-container">
                     Resume
                     <ul>
-                        <li>View</li>
+                        <li><%= link_to "View", resume_path(@resume) %></li>
                         <li><%=link_to "Edit", edit_resume_path(@resume) %></li>
                     </ul>
                 </div>
