--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -54,7 +54,7 @@
         <div class="nav-right">
             <ul>
                 <li><%= link_to('Projects', details_path()) %></li>
-                <li><%= link_to('Resume', resume_path()) %> <%= link_to(fa_icon("file"), "/resume.pdf", aria: {label:"View Peter's Resume as a PDF"}, target: "_blank") %></li>
+                <li><%= link_to('Resume', res_path()) %> <%= link_to(fa_icon("file"), "/resume.pdf", aria: {label:"View Peter's Resume as a PDF"}, target: "_blank") %></li>
                 <li class="stripe1">4 the Kids</li>
             </ul>
         </div>
