--- a/app/views/home/print.html.erb
+++ b/app/views/home/print.html.erb
@@ -1,4 +1,5 @@
 <div class=".print_res">
+    <%= @user.first_name %>
     <div class='n'>Peter Koruga</div>
     <div class='c'>(906) 662-4859 - peterk3@koruga.com</div>
     <div class="me-intro">Software developer uniquely qualified in business</div>
