--- a/app/assets/stylesheets/resumes.scss
+++ b/app/assets/stylesheets/resumes.scss
@@ -1,3 +1,125 @@
 // Place all the styles related to the resumes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$light-yellow: #FFFFA6;
+$yellow: #FFE373;
+$light-orange: #FC9C54;
+$orange: #FD5E53;
+
+.floating-nav {
+    position: fixed;
+    display: flex;
+    top: 10px;
+    right: 10px;
+    width: 110px;
+    justify-content: space-between;
+}
+
+.res-button {
+    min-width: 50px;
+    height: 30px;
+    border-radius: 5px;
+    text-align: center;
+    border: none;
+    font-size: 13px;
+    a {
+        text-decoration: none;
+        color: black;
+    }
+}
+
+.back {
+ background-color: $orange;
+ 
+ &:hover {
+     background-color: $light-orange;
+ }
+}
+
+.print {
+    background-color: $yellow;
+ 
+ &:hover {
+     background-color: $light-yellow;
+ }
+}
+
+.top {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.other-d {
+    width: 100%;
+}
+
+tr {
+    width: 100%;
+}
+
+td {
+    width: 50%;
+}
+
+hr {
+    margin: 20px 0px 20px 0px;
+    border-width: 3px;
+}
+.nd {
+    text-align: center;
+    font-size: 50px;
+}
+
+.cd {
+    text-align: center;
+    font-size: 25px;
+    padding-bottom: 20px;
+}
+
+.me-intro-d {
+    text-align: center;
+    font-size: 30px;
+    padding-bottom: 50px;
+}
+
+.hd {
+    text-align: center;
+    font-size: 40px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
+}
+
+.cat-d {
+    padding-left: 20px;
+}
+
+.item-d {
+    padding-bottom: 20px;
+}
+
+.resumer-container-d {
+
+
+}
+
+.subhead-d {
+    font-size: 70px;
+    padding-bottom: 15px;
+}
+
+.i-d {
+    font-size: 50px;
+    padding-bottom: 15px;
+    padding-left: 20px;
+}
+
+.rli-d {
+    font-size: 50px;
+}
+
+.list-d {
+    padding-left: 20px;
+}
