--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -1,33 +1,38 @@
+<div class="floating-nav">
+    <button class="res-button back"><%= link_to "Back", job_application_path(@app) %></button>
+    <button class="res-button print">Print</button>
+</div>
+
 <div class=".print_res">
-    <div class='n'><%= "#{@user.first_name} #{@user.last_name}" %></div>
-    <div class='c'><%= "#{@user.phone} - #{@user.email} - https://peter.koruga.com?appid=#{@appCode}" %></div>
-    <div class="me-intro">@resume.title</div>
-    <div class="h">Experience</div>
-    <div class='cat'>
-        <div class="i"><%= @resume.expir_desc%></div>
-        <div class="resumer-container">
+    <div class='nd'><%= "#{@user.first_name} #{@user.last_name}" %></div>
+    <div class='cd'><%= "#{@user.phone} - #{@user.email} - https://peter.koruga.com?appid=#{@appCode}" %></div>
+    <div class="me-intro-d"><%= @resume.title %></div>
+    <div class="hd">Experience</div>
+    <div class='cat-d'>
+        <div class="i-d"><%= @resume.expir_desc%></div>
+        <div class="resumer-container-d">
             <% @projects.each do |p|%>
-                <div class="item">
-                    <div class="subhead"><%= p.title %></div>
-                        <div class="i"><%= p.description %>
+                <div class="item-d">
+                    <div class="subhead-d"><%= p.title %></div>
+                        <div class="i-d"><%= p.description %>
                         </div>
                 </div>
             <% end %>
         </div>
     </div>
-    <div class="h">Languages - Frameworks - Systems</div>
-    <div class='cat'>
-        <div class="i"><%= @resume.tech_desc%></div>
-        <div class="resumer-container">
-            <div class="item">
-                <div class="list">
-                    <table class="other">
+    <div class="hd">Languages - Frameworks - Systems</div>
+    <div class='cat-d'>
+        <div class="i-d"><%= @resume.tech_desc%></div>
+        <div class="resumer-container-d">
+            <div class="item-d">
+                <div class="list-d">
+                    <table class="other-d">
                         <tr>
                             <% @techGroups.each do |tg| %>
                                 <td>
                                     <ul>
                                         <% tg.each do |t| %>
-                                            <li class="rli"><%= t.name %></li>
+                                            <li class="rli-d"><%= t.name %></li>
                                         <% end %>
                                     <ul>
                                 </td>
@@ -39,19 +44,19 @@
         </div>
     </div>
 
-    <div class="h">Certificates from Lynda.com and LinkedIn</div>
-        <div class='cat'>
-            <div class="i"><%= @resume.tech_desc%></div>
-            <div class="resumer-container">
-                <div class="item">
-                    <div class="list">
-                        <table class="other">
+    <div class="hd">Certificates from Lynda.com and LinkedIn</div>
+        <div class='cat-d'>
+            <div class="i-d"><%= @resume.tech_desc%></div>
+            <div class="resumer-container-d">
+                <div class="item-d">
+                    <div class="list-d">
+                        <table class="other-d">
                             <tr>
                                 <% @certGroups.each do |cg| %>
                                     <td>
                                         <ul>
                                             <% cg.each do |c| %>
-                                                <li class="rli"><%= c.title %></li>
+                                                <li class="rli-d"><%= c.title %></li>
                                             <% end %>
                                         <ul>
                                     </td>
@@ -63,12 +68,12 @@
             </div>
         </div>
 
-    <div class="h">Education</div>
-        <div class='cat'>
-            <div class="i"><%= @resume.edu_desc%></div>
-            <div class="resumer-container">
-                <div class="item">
-                    <div class="i">Bachelors of Science in Business from Northern Michigan University 2005</div>
+    <div class="hd">Education</div>
+        <div class='cat-d'>
+            <div class="i-d"><%= @resume.edu_desc%></div>
+            <div class="resumer-container-d">
+                <div class="item-d">
+                    <div class="i-d">Bachelors of Science in Business from Northern Michigan University 2005</div>
                 </div>
             </div>
         </div>
